<resources>
    <string name="app_name" translatable="false">HelsinkiTour</string>

    <string name="map_label">Map</string>
    <string name="search_label">Search</string>
    <string name="stats_label">Stats</string>

    <string name="activities">Activities</string>
    <string name="events">Events</string>
    <string name="places">Places</string>

    <string name="hint_search">What you want to search?</string>
    <string name="event_dates_title">Event dates</string>
    <string name="event_dates" translatable="false">%s - %s</string>
    <string name="event_date_time" translatable="false">%s %s-%s</string>
    <string name="duration">Duration</string>
    <string name="duration_time" translatable="false">%s</string>
    <string name="address">Address</string>
    <string name="address_street_city" translatable="false">%s\n%s %s</string>
    <string name="marker_address_street_city" translatable="false">%s, %s %s</string>
    <string name="more_info">More info</string>
    <string name="opening_hours_title">Opening hours</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="opening_hours" translatable="false">%s-%s</string>
    <string name="closed">Closed</string>
    <string name="open_24">Open 24h</string>
    <string name="favorite">Favorite</string>
    <string name="step_count" translatable="false">%d</string>
    <string name="favorites">Favorites</string>
    <string name="showOnMap">Show on map</string>

    <string name="user_location_fab">Get user location</string>
    <string name="marker_window_read_more_btn">Read More</string>
    <string name="marker_window_address">Address</string>
    <string name="what_map">What you want to do?</string>
    <string name="navigate">Navigate</string>
    <string name="show">Show</string>
    <string name="do_you_want_open_gps">Do you want open location setting?</string>
    <string name="gps_not_enabled">GPS is not enabled</string>
    <string name="distance" translatable="false">%.2f km</string>
    <string name="steps_title">Total Steps</string>
    <string name="distance_title">Total Distance</string>
    <string name="add_name_hint">Add name</string>
    <string name="dot" translatable="false">•</string>
    <string name="profile_image">Profile Image</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="add_image">Add image</string>
    <string name="from_gallery">From gallery</string>
    <string name="take_photo">Take photo</string>
</resources>