<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="helsinkiItem"
            type="fi.joonaun.helsinkitour.network.Helsinki" />
    </data>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/image_slider"
                android:layout_width="0dp"
                android:layout_height="260dp"
                android:elevation="100dp"
                app:imageSliderImages="@{helsinkiItem.description.images}"
                app:iss_auto_cycle="true"
                app:iss_delay="0"
                app:iss_error_image="@drawable/ic_baseline_error_outline_24"
                app:iss_period="1000"
                app:iss_placeholder="@drawable/ic_baseline_downloading_24"
                app:iss_title_background="@android:color/transparent"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_slider">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/bubble_title"
                        style="@style/TitleStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@{helsinkiItem.getLocaleName()}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/favouriteCheckBox"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Kaffecentralen Fredrikinkatu " />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/favouriteCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/sl_favourite_24dp"
                        android:buttonTint="#ffbc00"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/bubble_title"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1.0" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/SubcontentStyle"
                        android:text="@{helsinkiItem.description.body ?? helsinkiItem.description.intro}"
                        tools:text="Kaffecentralen is a Finnish company specialised in espresso coffee and -machines. Espresso based coffee drinks to go or to enjoy at the shop." />
                </LinearLayout>

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:id="@+id/layoutPlace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:showIfPlace="@{helsinkiItem}">

                    <TextView
                        android:id="@+id/txtOpeningHoursTitle"
                        style="@style/SubtitleStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/opening_hours_title" />

                    <TextView
                        android:id="@+id/txtHours"
                        style="@style/SubcontentStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hours="@{helsinkiItem}"
                        tools:text="Open 24/7" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:showIfActivity="@{helsinkiItem}"
                    app:showIfHasDuration="@{helsinkiItem}">

                    <TextView
                        android:id="@+id/txtWhenWhenTitle"
                        style="@style/SubtitleStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/duration" />

                    <TextView
                        android:id="@+id/txtWhereWhen"
                        style="@style/SubcontentStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:whereAndWhen="@{helsinkiItem}"
                        tools:text="30 min" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutEvent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:showIfEvent="@{helsinkiItem}">

                    <TextView
                        android:id="@+id/txtEventDatesTitle"
                        style="@style/SubtitleStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/event_dates_title" />

                    <TextView
                        android:id="@+id/txtEventDates"
                        style="@style/SubcontentStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:eventDates="@{helsinkiItem}"
                        tools:text="@string/event_dates" />
                </LinearLayout>

                <View
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="?android:attr/listDivider" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    >

                    <LinearLayout
                        android:id="@+id/linearLayout6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/linearLayout5"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/txtAddressTitle"
                            style="@style/SubtitleStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/address" />

                        <TextView
                            android:id="@+id/txtAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/SubcontentStyle"
                            app:address="@{helsinkiItem.location.address}"
                            tools:text="@string/address_street_city" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout5"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/linearLayout6"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/txtMoreInfo"
                            style="@style/SubtitleStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/more_info" />

                        <TextView
                            android:id="@+id/txtInfoUrl"
                            style="@style/SubcontentStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:url="@{helsinkiItem.infoUrl}"
                            tools:text="https://www.google.fi" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
</layout>